Thu Nov  7 10:34:12 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_sample): use rb_ary_dup().

Thu Nov  7 09:39:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): errinfo should not
	  be propagated to trace blocks so that no argument raise does not
	  throw internal objects.  [ruby-dev:47793] [Bug #9088]

Wed Nov  6 21:30:55 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_before_sweep): Change algorithm of malloc_limit to
	  conservative for closing to memory consumption of ruby 2.0.

	* gc.c (GC_MALLOC_LIMIT, GC_MALLOC_LIMIT_GROWTH_FACTOR):
	  Adjust parameters for new algorithm.

Wed Nov  6 21:16:51 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_shift_m): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

Wed Nov  6 21:05:20 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_reverse): use RARRAY_PTR_USE().

Wed Nov  6 19:30:44 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* common.mk (help): add texts about gcbench.

Wed Nov  6 16:32:32 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/open3.rb: tweaked grammar in comments

Wed Nov  6 11:46:36 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_sample): use RARRAY_AREF() and RARRAY_PTR_USE()
	  instead of RARRAY_PTR().

Wed Nov  6 10:37:07 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_and): defer hash creation and some refactoring.

Wed Nov  6 09:14:31 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_gc_short_lived.rb: added.
	  These GC benchmarks do not reflect practical applications.
	  They are only for tuning.

	* benchmark/bm_vm1_gc_short_with_complex_long.rb: added.

	* benchmark/bm_vm1_gc_short_with_long.rb: added.

	* benchmark/bm_vm1_gc_short_with_symbol.rb: added.

	* benchmark/bm_vm1_gc_wb_ary.rb: added.

	* benchmark/bm_vm1_gc_wb_obj.rb: added.

	* benchmark/bm_vm_thread_queue.rb: added.